# toneMatchAi

./: .gitignore  .gitmodules  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  COMPILATION_GUIDE.md  DEPLOYMENT_GUIDE.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_COMPLETE.md  MODEL_RENAMING_GUIDE.md  README.md  README_DESIGN.md  TESTING_CHECKLIST.md  TESTING_PROTOCOL.md  VERIFICATION_REPORT.md  copy_to_system.ps1  deploy_resources.ps1  install_plugin.ps1  install_to_system.bat  nam_models_list.txt  rename_models.ps1  rename_models_analysis.md  rename_models_auto.ps1  rename_models_final.ps1  rename_models_remaining.ps1  requirements.txt  run_as_admin.ps1  run_final_tune.py  run_universal_match.py  test_progress_manual.md  test_progress_simple.ps1  test_progress_updates.cpp  test_python_bridge.py  update_plugin.ps1  verify_integration_points.md  verify_pre_compilation.ps1
.cursor/: LOG_ANALYSIS.md  SUMMARY.md  analyze_logs.py  view_logs.py
RELEASE_VERSION/: INSTALL_GUIDE.txt  ToneMatch AI.exp  ToneMatch AI.lib
assets/nam_models/: Boss HM2 v1 kinda bass heavy with medium distOrangetion pure.nam  Boss HM2BTFO heavy distOrangetion meant to be standalone les.nam  Boss HM2EQ light distOrangetion with dimed EQ knobs use befO.nam  Bug1990-Lead-Cleanean-Cab.nam  Bug1990-Lead-Cleanean.nam  Bug333-Cleanean-Cab.nam  Bug333-Crunchunch-DT-Cab.nam  Bug333-Lead-Cleanean-Cab.nam  Bug333-Lead-Cleanean.nam  Bug6262-Crunchunch-Cleanean-Cab.nam  Bugera6262-Crunchunch-Cleanean.nam  Bugera6262-Lead-Cleanean.nam  Bugera6262-Lead-M77.nam  Demonfx Dual Boost FOrangetin 33 side ESR 0.0017 Lite.nam  Demonfx Dual Boost Xotic EP boost side 0.0016 Lite.nam  Demonfx Dual Boost Xotic EP boost side 0.0023 Lite.nam  Demonfx Dual Boost Xotic EP boost side 0.0026 Lite.nam  DirtyShirleyMini Crunchunch B4 M5.5 T6 MV6 GS high.nam  DirtyShirleyMini Crunchunch G8.nam  DirtyShirleyMini Crunchunch.nam  DirtyShirleyMini lowDrive GainStruCleanow.nam  DirtyTree DT-33 ESR-0.0001.nam  DirtyTree DT-33 Feather ESR-0.0001.nam  Driftwood Nightmare Low Gain TS.nam  Driftwood Nightmare Low Gain.nam  FOrangetin Greenind Mini Knob 5 ESR 0.0012 Lite.nam  FOrangetin Greenind Mini Knob 5 ESR 0.0017 standaRed.nam  FriedmanDSM PowerAmpEL84 MV6 Feather.nam  HM-2 L10 H10 D0 ESR-0.0004.nam  HM-2 L10 H10 D0 Feather ESR-0.0015.nam  HM-2 L10 H10 D0 Lite ESR-0.0007.nam  HM-2 L10 H8 D2 ESR-0.0008.nam  HM-2 L10 H8 D2 Feather-ESR-0.0025.nam  HM-2 L10 H8 D2 Lite ESR-0.0014.nam  HM-2 L8 H4 D0 ESR-0.0015.nam  HM-2 L8 H4 D0 Feather ESR-0.0025.nam  HM-2 SWEDE ESR-0.0034.nam  HM-2 SWEDE Lite ESR-0.0057.nam  Helga B GCI Jugendstil.nam  Helga B PP Wendigo.nam  (+58 more)
assets/nam_models_backup/: Helga B XXX-6L6-Wendigo-ESR0,016.nam  Peter N HM-2_SWEDE_Feather_ESR-0.0097.nam  Peter N HM-2_V5_L8_H4_D0_Lite_ESR-0.0015.nam  Phillipe P Bug333-Clean-ESR0,002.nam  Phillipe P Bug333-Crunch-DT-ESR0,0133.nam  Phillipe P Bug333-Crunch-NoDrive-Cab-ESR0,005.nam  Phillipe P JVM-CR-OR-SD1-ESR0,018.nam  Phillipe P VOXAC15-JonAr1.nam  README.md  Sascha S DirtyShirleyCrunch_G4_BuxBoostTight.nam  Tudor N Ibanez Tube Screamer Mini Tone@5_Level@5_Overdrive@5 ESR_0.0008_standard.nam  Tudor N MXR M77 Custom Badass Modified OD Tone@6.5_Output@10_Gain@0_100HZ@2_Bump@off ESR_0.0010_lite.nam  (+4 more)
plugin/: CMakeLists.txt  FIXES_APPLIED.md
plugin/Resources/: default_preset.json
plugin/Scripts/: build_standalone.py  run_match.py  tone_matcher.py
plugin/Source/: FontManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/Bridge/: PythonBridge.cpp  PythonBridge.h
plugin/Source/DSP/: DSPChain.cpp  DSPChain.h  NAMProcessor.cpp  NAMProcessor.h  SimpleGate.h
plugin/Source/Preset/: PresetManager.cpp  PresetManager.h
plugin/Source/UI/: KnobStrip.cpp  KnobStrip.h  SlotComponent.cpp  SlotComponent.h
src/: app.py
src/core/: analysis.py  data_generator.py  io.py  (+6 more)
(+31 files in other folders)
